bssm 1.1.3 
==============
   * Fixed PM-MCMC and DA-MCMC for SDE models and added an example to `ssm_sde`.
   * Fixed the state covariance estimates of IS-MCMC, approx-MCMC, and 
     Gaussian MCMC when output_type = "summary".
   * Fixed memory leaks due to uninitialized variables due to aborted particle filter.
   * Fixed numerical issues of multivariate normal density for nonlinear models.
   * Removed dependency on R::lchoose for safer parallel code.
   * Added vignette for SDE models.
   * Updated citation information and streamlined the main vignette.
   
bssm 1.1.2 (Release date: 2021-02-08)
==============
   * Changed the definition of D in ssm_ulg and ssm_ung, functions now accept D as scalar or vector as 
     was originally intended.
   * Fixed a segfault issue with parallel state sampling in general ssm_ulg/mlg/ung/mng models
     caused by calls to R function inside parallel region.
   * Fixed a bug from version 1.0.0 in IS1 type sampling which actually lead to IS2 type sampling.
   * Fixed out-of-bounds error in IS3 sampling.
   * Fixed weight computations for multivariate nonlinear models in case of psi-APF 
     in some border cases with non-standard H.
   * Removed Armadillo bound checks for efficiency gains.
   
bssm 1.1.1 (Release date: 2021-01-22)
==============
   
   * Added missing scaling for Gamma distribution in importance sampling weights for added numerical robustness.
   * Fixed sequential importance sampling for multivariate non-gaussian models.
   * Fixed simulation smoother for multivariate Gaussian models.

bssm 1.1.0 (Release date: 2021-01-19)
==============
   
   * Added function `suggest_N` which can be used to choose 
     suitable number of particles for IS-MCMC.
   * Added function `post_correct` which can be used to update 
     previous approximate MCMC with IS-weights.
   * Gamma priors are now supported in easy-to-use models such as `bsm_lg`. 