@@ -68,7 +68,7 @@ Rcpp::List psi_smoother(const Rcpp::List model_,
   arma::cube Vt(model.m, model.m, model.n + 1);
   
   filter_smoother(alpha, indices);
-  weighted_summary(alpha, alphahat, Vt, weights.col(model.n));
+  summary(alpha, alphahat, Vt); // weights are uniform due to extra time point
   
   arma::inplace_trans(alphahat);
   return Rcpp::List::create(
@@ -92,7 +92,7 @@ Rcpp::List psi_smoother(const Rcpp::List model_,
   arma::cube Vt(model.m, model.m, model.n + 1);
   
   filter_smoother(alpha, indices);
-  weighted_summary(alpha, alphahat, Vt, weights.col(model.n));
+  summary(alpha, alphahat, Vt); // weights are uniform due to extra time point
   
   arma::inplace_trans(alphahat);
   return Rcpp::List::create(
@@ -114,7 +114,7 @@ Rcpp::List psi_smoother(const Rcpp::List model_,
     arma::cube Vt(model.m, model.m, model.n + 1);
     
     filter_smoother(alpha, indices);
-    weighted_summary(alpha, alphahat, Vt, weights.col(model.n));
+    summary(alpha, alphahat, Vt); // weights are uniform due to extra time point
     
     arma::inplace_trans(alphahat);
     return Rcpp::List::create(
@@ -136,7 +136,7 @@ Rcpp::List psi_smoother(const Rcpp::List model_,
     arma::cube Vt(model.m, model.m, model.n + 1);
     
     filter_smoother(alpha, indices);
-    weighted_summary(alpha, alphahat, Vt, weights.col(model.n));
+    summary(alpha, alphahat, Vt); // weights are uniform due to extra time point
     
     arma::inplace_trans(alphahat);
     return Rcpp::List::create(
@@ -158,7 +158,7 @@ Rcpp::List psi_smoother(const Rcpp::List model_,
     arma::cube Vt(model.m, model.m, model.n + 1);
     
     filter_smoother(alpha, indices);
-    weighted_summary(alpha, alphahat, Vt, weights.col(model.n));
+    summary(alpha, alphahat, Vt); // weights are uniform due to extra time point
     
     arma::inplace_trans(alphahat);
     return Rcpp::List::create(
@@ -213,7 +213,7 @@ Rcpp::List psi_smoother_nlg(const arma::mat& y, SEXP Z, SEXP H,
   arma::cube Vt(model.m, model.m, model.n + 1);
 
   filter_smoother(alpha, indices);
-  weighted_summary(alpha, alphahat, Vt, weights.col(n));
+  summary(alpha, alphahat, Vt); // weights are uniform due to extra time point
   arma::inplace_trans(alphahat);
   return Rcpp::List::create(
     Rcpp::Named("alphahat") = alphahat, Rcpp::Named("Vt") = Vt,
