@@ -1,5 +1,6 @@
 bssm 1.1.3 
 ==============
+   * Slightly faster filtering and IS-MCMC due to removal of extra weighting with uniform weights.
    * Fixed PM-MCMC and DA-MCMC for SDE models and added an example to `ssm_sde`.
    * Fixed the state covariance estimates of IS-MCMC, approx-MCMC, and 
      Gaussian MCMC when output_type = "summary".
